--- a/Website/config.toml
+++ b/Website/config.toml
@@ -23,7 +23,7 @@ paginate = 10
 disqusShortname = ""
 
 # Enable analytics by entering your Google Analytics tracking ID
-googleAnalytics = ""
+googleAnalytics = "UA-119569565-1"
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
@@ -263,9 +263,20 @@ enableGitInfo = false
   weight = 2
 
 [[menu.main]]
+  name = "Talks"
+  url = "#talks"
+  weight = 3
+  
+[[menu.main]]
+  name = "Posters"
+  url = "#posters"
+  weight = 4  
+
+[[menu.main]]
   name = "Contact"
   url = "#contact"
-  weight = 3
+  weight = 5
+
 
 # Taxonomies.
 [taxonomies]
