--- a/config.toml
+++ b/config.toml
@@ -55,7 +55,7 @@ enableGitInfo = false
 
   # Your details.
   name = "Nick Buttrick"
-  role = "Graduate Student in Social Psychology"
+  role = "Postdoctoral Research Associate"
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
