--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ title = "Nick Buttrick"
 
 # Your copyright notice - appears in site footer.
 # To display a copyright symbol, type `&copy;`.
-copyright = "&copy; 2020"
+copyright = "&copy; 2021"
 
 theme = "hugo-academic"
 enableEmoji = true
@@ -59,8 +59,7 @@ enableGitInfo = false
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "School of Public and International Affairs, Princeton University", 
-  url = "https://spia.princeton.edu/" } ]
+  organizations = [ { name = "School of Public and International Affairs, Princeton University", url = "https://spia.princeton.edu/" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
