--- a/config.toml
+++ b/config.toml
@@ -59,8 +59,8 @@ enableGitInfo = false
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "Current: School of Public and International Affairs, Princeton University", url = "https://spia.princeton.edu/" },
-  {name = "Future: Department of Psychology, University of Wisconsin-Madison", url = "https://psych.wisc.edu/"}]
+  organizations = [ { name = "Current: Postdoctoral Research Associate, School of Public and International Affairs, Princeton University", url = "https://spia.princeton.edu/" },
+  {name = "Future: Assistant Professor, Department of Psychology, University of Wisconsin-Madison", url = "https://psych.wisc.edu/"}]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
