--- a/config.toml
+++ b/config.toml
@@ -60,7 +60,7 @@ enableGitInfo = false
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
   organizations = [
-  {name = "Assistant Professor, Department of Psychology, University of Wisconsin-Madison", url = "https://psych.wisc.edu/"}]
+  {name = "Department of Psychology, University of Wisconsin-Madison", url = "https://psych.wisc.edu/"}]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
