--- a/config.toml
+++ b/config.toml
@@ -245,7 +245,7 @@ enableGitInfo = false
     link = "files/CV.pdf"
 
   [[params.social]]
-    icon = "calendar-plus"
+    icon = "fa-calendar-plus"
     icon_pack = "fa"
     link = "https://www.calendly.com/nick-buttrick"
 
